--- a/public/index.html
+++ b/public/index.html
@@ -1461,7 +1461,7 @@
 
     <script>
         // ==================== Socket.io Connection ====================
-        const backendURL = 'https://duduk-sebentar-production.up.railway.app/';
+        const backendURL = 'https://duduksebentar.up.railway.app/';
         const socket = io(backendURL, {
             reconnection: true,
             reconnectionDelay: 1000,
